<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:text="@string/edit_profile" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/iv_avatar_edit"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/person_unknown"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    style="@style/label_style_primary"/>

                <EditText
                    android:id="@+id/et_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/input_style_primary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    style="@style/label_style_primary"/>

                <EditText
                    android:id="@+id/et_edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/input_style_primary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    style="@style/label_style_primary"/>

                <EditText
                    android:id="@+id/et_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/input_style_primary"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
    <TextView
        android:id="@+id/tv_save_changes_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save Changes"
        style="@style/label_style_primary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />

</RelativeLayout>